address bar on mobile - fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,8 +4,7 @@
 
 @layer utilities {
     html, body {
-        position: absolute;
-        height: 100%;
+        min-height: 100% !important;
         box-sizing: border-box;
         overflow-x: hidden;
         scroll-behavior: smooth;
